# eigengen

./: .eigengen_ignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  build.sh  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup.py
docs/: rag_system.md  sample-config.json
eigengen/: eigengen.py  prompts.py  providers.py
src/eigengen/: api.py  chat.py  chat_api.py  chat_area_widget.py  chat_input_widget.py  chat_widgets.py  chat_worker.py  code.py  config.py  context_manager.py  eggrag.py  eigengen.py  embeddings.py  gitfiles.py  gui.py  indexing.py  keybindings.py  log.py  logging.py  meld.py  model_specs.py  operations.py  progress.py  prompts.py  providers.py  utils.py
src/eigengen/rag/: context_extractor.py  dense_doc_generator.py  file_parser.py  indexing.py  inverted_index.py  test_git_processing.py
tests/: conftest.py  test_eigengen.py  test_providers.py
tests/fixtures/: mock_provider.py
ui/: .gitignore  bs-config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
ui/src/: chat.ts  fileTree.ts  main.ts  markdownEngine.ts  meldOverlay.ts  style.css
