[project]
name = "eigengen"
version = "0.3.0"
requires-python = ">= 3.12"
dependencies = [
    "anthropic>=0.46.0",
    "fastapi[standard]>=0.115.8",
    "google-genai>=1.2.0",
    "groq>=0.18.0",
    "mistralai>=1.5.0",
    "openai>=1.63.2",
    "prompt-toolkit>=3.0.50",
    "pyperclip>=1.9.0",
]

[project.scripts]
egg = "eigengen.eigengen:main"

[dependency-groups]
dev = [
    "pyright>=1.1.396",
    "ruff>=0.9.10",
]


[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
select = [
    "B",  # Bug risk linting
    "E",  # Pycodestyle error codes
    "F",  # PyFlakes errors
    "I",  # Import order
    "N",  # Naming conventions
    "Q",  # Quote style (Black-compatible)
    "T",  # Type checking
    "W",  # Warnings and stylistic issues
]
ignore = []

[tool.pyright]
executionEnvironments = [{ root = "src" }]
typeCheckingMode = "standard"
venv = ".venv"
venvPath = "."
